Remove command to generate QR Code

--- a/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
@@ -49,7 +49,7 @@
         </c:AdorningContentControl.Adornment>
         <Viewbox Margin="20" MaxHeight="270" MinHeight="100">
           <c:PrivacyContentControl Height="264" PrivacyReplacementMode="Icon">
-            <c:QrCode Matrix="{Binding QrCode}" SaveCommand="{Binding QrCodeCommand, Mode=OneWayToSource}" />
+            <c:QrCode Matrix="{Binding QrCode^}" SaveCommand="{Binding QrCodeCommand, Mode=OneWayToSource}" />
           </c:PrivacyContentControl>
         </Viewbox>
       </c:AdorningContentControl>
