--- a/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
@@ -27,7 +27,8 @@
             <c:AnimatedButton ToolTip.Tip="Copy"
                               Command="{Binding CopyAddressCommand}"
                               NormalIcon="{StaticResource copy_regular}"
-                              ClickIcon="{StaticResource copy_confirmed}" />
+                              ClickIcon="{StaticResource copy_confirmed}"
+                              ExecuteOnOpen="{Binding IsAutoCopyEnabled}"/>
           </StackPanel>
           <c:PrivacyContentControl FontSize="{StaticResource FontSizeH5}">
             <TextBlock Classes="monoSpaced" Text="{Binding Address}" />
