Update to preview8

--- a/WalletWasabi.Fluent/Controls/TagsBox.axaml
+++ b/WalletWasabi.Fluent/Controls/TagsBox.axaml
@@ -76,7 +76,7 @@
                       <c:ConcatenatingWrapPanel Focusable="False" VerticalAlignment="Center">
                         <c:ConcatenatingWrapPanel.ConcatenatedChildren>
                           <c:TagsBoxAutoCompleteBox x:Name="PART_AutoCompleteBox"
-                                                  Items="{Binding $parent[c:TagsBox].Suggestions}"
+                                                  ItemsSource="{Binding $parent[c:TagsBox].Suggestions}"
                                                   FilterMode="StartsWith" />
                         </c:ConcatenatingWrapPanel.ConcatenatedChildren>
                       </c:ConcatenatingWrapPanel>
