--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingView.axaml
@@ -143,7 +143,7 @@
         </ListBox>
 
         <!-- TODO: IsVirtualized="False" -->
-        <Carousel Items="{Binding PreviewItems}"
+        <Carousel ItemsSource="{Binding PreviewItems}"
                   SelectedItem="{Binding SelectedItem, Mode=OneWay}"
                   VerticalAlignment="Center" HorizontalAlignment="Center"
                   x:Name="Carousel">
