--- a/WalletWasabi.Fluent/Views/Dialogs/ConfirmHideAddressView.axaml
+++ b/WalletWasabi.Fluent/Views/Dialogs/ConfirmHideAddressView.axaml
@@ -20,7 +20,7 @@
       </c:QuestionControl.IconContent>
       <StackPanel Spacing="10">
         <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Do you wish to hide the address with the following labels?" />
-        <c:LabelsItemsPresenter ItemsSource="{Binding Label}" HorizontalAlignment="Center"  />
+        <c:LabelsItemsPresenter HorizontalAlignment="Center" ItemsSource="{Binding Label}"  />
         <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="This can not be undone." />
       </StackPanel>
     </c:QuestionControl>
