--- a/WalletWasabi.Fluent/Controls/PreviewItem.axaml
+++ b/WalletWasabi.Fluent/Controls/PreviewItem.axaml
@@ -21,7 +21,8 @@
                     DockPanel.Dock="Left" IsVisible="{TemplateBinding Icon, Converter={x:Static ObjectConverters.IsNotNull}}" />
           <DockPanel>
             <TextBlock Name="PART_Text" Text="{TemplateBinding Label}" DockPanel.Dock="Top" Margin="0 0 0 5"
-                       Opacity="0.6" />
+                       Opacity="0.6"
+                       IsVisible="{Binding !!$self.Text}"/>
             <DockPanel HorizontalAlignment="Left" DockPanel.Dock="Bottom">
               <c:ClipboardCopyButton x:Name="PART_ClipboardCopyButton"
                                      ToolTip.Tip="Copy"
