--- a/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
@@ -42,7 +42,7 @@
       <c:AdorningContentControl HorizontalAlignment="Center" VerticalAlignment="Center" ClipToBounds="False">
         <c:AdorningContentControl.Adornment>
           <Panel Margin="0 0 -5 20">
-            <Button Command="{Binding SaveQrCodeCommand}" ToolTip.Tip="Save" Classes="plain icon"
+            <Button Command="{Binding #QrCode.SaveCommand}" CommandParameter="{Binding Address}" ToolTip.Tip="Save" Classes="plain icon"
                     HorizontalAlignment="Right" VerticalAlignment="Bottom">
               <PathIcon Data="{StaticResource save_regular}" />
             </Button>
@@ -50,7 +50,7 @@
         </c:AdorningContentControl.Adornment>
         <Viewbox Margin="20" MaxHeight="270" MinHeight="100">
           <c:PrivacyContentControl Height="264" PrivacyReplacementMode="Icon">
-            <c:QrCode Matrix="{Binding QrCode^}" SaveCommand="{Binding QrCodeCommand, Mode=OneWayToSource}" />
+            <c:QrCode x:Name="QrCode" Matrix="{Binding QrCode^}" />
           </c:PrivacyContentControl>
         </Viewbox>
       </c:AdorningContentControl>
