--- a/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
@@ -28,7 +28,7 @@
                               Command="{Binding CopyAddressCommand}"
                               NormalIcon="{StaticResource copy_regular}"
                               ClickIcon="{StaticResource copy_confirmed}"
-                              ExecuteOnOpen="{Binding IsAutoCopyEnabled}"/>
+                              AnimateIcon="{Binding IsAutoCopyEnabled}"/>
           </StackPanel>
           <c:PrivacyContentControl FontSize="{StaticResource FontSizeH5}">
             <TextBlock Classes="monoSpaced" Text="{Binding Address}" />
