--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
@@ -26,7 +26,7 @@
       <!-- Date -->
       <c:PreviewItem Icon="{StaticResource timer_regular}"
                      Label="Date / Time"
-                     TextValue="{Binding DateString, Mode=OneWay}">
+                     CopyableContent="{Binding DateString, Mode=OneWay}">
         <TextBlock Text="{Binding DateString, Mode=OneWay}" Classes="monoSpaced" />
       </c:PreviewItem>
 
@@ -35,7 +35,7 @@
       <!-- Amount -->
       <c:PreviewItem Icon="{StaticResource btc_logo}"
                      Label="{Binding AmountText}"
-                     TextValue="{Binding Amount}">
+                     CopyableContent="{Binding Amount}">
         <c:PrivacyContentControl>
           <TextBlock Text="{Binding Amount, Converter={x:Static converters:MoneyConverters.ToBtc}}" Classes="monoSpaced" />
         </c:PrivacyContentControl>
@@ -48,9 +48,9 @@
         
         <c:PreviewItem Icon="{StaticResource btc_logo}"
                        Label="Fee"
-                       TextValue="{Binding Fee}">
+                       CopyableContent="{Binding Fee}">
           <c:PrivacyContentControl>
-            <TextBlock Text="{Binding Fee, Converter={x:Static converters:MoneyConverters.ToBtc}}" Classes="monoSpaced" />
+            <TextBlock Text="{Binding Fee, Converter={x:Static converters:MoneyConverters.ToFee}}" Classes="monoSpaced" />
           </c:PrivacyContentControl>
         </c:PreviewItem>
 
@@ -74,7 +74,7 @@
       <!-- Transaction ID -->
       <c:PreviewItem Icon="{StaticResource transaction_id}"
                      Label="Transaction ID"
-                     TextValue="{Binding TransactionId}">
+                     CopyableContent="{Binding TransactionId}">
         <c:PrivacyContentControl>
           <TextBlock Text="{Binding TransactionId}" Classes="monoSpaced" />
         </c:PrivacyContentControl>
@@ -85,7 +85,7 @@
       <!-- Block hash -->
       <c:PreviewItem Icon="{StaticResource block_id}"
                      Label="Block hash"
-                     TextValue="{Binding BlockHash}"
+                     CopyableContent="{Binding BlockHash}"
                      IsVisible="{Binding IsConfirmed}">
         <TextBlock Text="{Binding BlockHash}" />
       </c:PreviewItem>
@@ -94,7 +94,7 @@
       <!-- Block height -->
       <c:PreviewItem Icon="{StaticResource block_height}"
                      Label="Block height"
-                     TextValue="{Binding BlockHeight}"
+                     CopyableContent="{Binding BlockHeight}"
                      IsVisible="{Binding IsConfirmed}">
         <TextBlock Text="{Binding BlockHeight}" />
       </c:PreviewItem>
@@ -103,7 +103,7 @@
       <!-- Labels -->
       <c:PreviewItem Icon="{StaticResource entities_regular}"
                      Label="Labels"
-                     TextValue="{Binding Labels}">
+                     CopyableContent="{Binding Labels}">
         <c:PrivacyContentControl VerticalContentAlignment="Center">
           <c:LabelsItemsPresenter Items="{Binding Labels}" />
         </c:PrivacyContentControl>
