--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -183,7 +183,8 @@
                       <DoubleTransition Property="Opacity" Duration="0:0:0.175" Easing="1,0,1,0" />
                     </Transitions>
                   </LayoutTransformControl.Transitions>
-                  <c:FadeOutTextBlock Text="{Binding Title}" HorizontalAlignment="Center" FontSize="{StaticResource FontSizeH9}" />
+                  <c:FadeOutTextBlock Text="{Binding Title}" HorizontalAlignment="Center" FontSize="{StaticResource FontSizeH9}"
+                                      IsVisible="{Binding $parent[ListBoxItem].IsSelected, Converter={x:Static BoolConverters.Not}}" />
                 </LayoutTransformControl>
               </StackPanel>
             </Panel>
