--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -187,6 +187,11 @@
                                       IsVisible="{Binding $parent[ListBoxItem].IsSelected, Converter={x:Static BoolConverters.Not}}" />
                 </LayoutTransformControl>
               </StackPanel>
+              <Border Name="SelectionIndicator" Margin="0.5,0,0,0"
+                      VerticalAlignment="Stretch" HorizontalAlignment="Left"
+                      Width="4" Height="24" CornerRadius="3"
+                      Background="{DynamicResource AcrylicTrimForeground}"
+                      IsVisible="{Binding $parent[ListBoxItem].IsSelected}" />
             </Panel>
           </DataTemplate>
         </ListBox.DataTemplates>
