--- a/WalletWasabi.Fluent/Views/MainWindow.axaml
+++ b/WalletWasabi.Fluent/Views/MainWindow.axaml
@@ -29,6 +29,7 @@
   </Window.Styles>
   <i:Interaction.Behaviors>
     <behaviors:RegisterNotificationHostBehavior />
+    <behaviors:AutoHideFlyoutBehavior />
   </i:Interaction.Behaviors>
 
   <Panel Margin="{Binding #MainWindow.OffScreenMargin}">
