--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -28,7 +28,6 @@
       <Setter Property="Margin" Value="4 1" />
       <Setter Property="Padding" Value="0" />
       <Setter Property="Cursor" Value="Hand" />
-      <Setter Property="Command" Value="{Binding OpenCommand}" />
     </Style>
 
     <Style Selector="c|NavBarItem StackPanel">
@@ -134,7 +133,7 @@
       </ItemsControl.ItemsPanel>
       <ItemsControl.DataTemplates>
         <DataTemplate DataType="vm:NavBarItemViewModel">
-          <c:NavBarItem>
+          <c:NavBarItem Command="{Binding OpenCommand}">
             <StackPanel>
               <PathIcon Classes="new size24" />
               <LayoutTransformControl>
@@ -160,7 +159,30 @@
         </Interaction.Behaviors>
         <ListBox.DataTemplates>
           <DataTemplate DataType="vmw:WalletPageViewModel">
-            <Panel ToolTip.Tip="{Binding Title}"
+            <c:NavBarItem IsSelected="{Binding $parent[ListBoxItem].IsSelected}">
+              <Panel ToolTip.Tip="{Binding Title}">
+                <Ellipse Classes="loadingindicator"
+                         Classes.isLoading="{Binding IsLoading}"
+                         Classes.isLoggedIn="{Binding IsLoggedIn}"
+                         Classes.isCoinjoining="{Binding WalletViewModel.IsCoinJoining}" />
+                <StackPanel VerticalAlignment="Center" Spacing="2">
+                  <PathIcon Classes="new size24 wallet"
+                            Classes.isfocused="{Binding $parent[ListBoxItem].IsSelected}" />
+                  <LayoutTransformControl LayoutTransform="scaleY(1)"
+                                          Opacity="1">
+                    <LayoutTransformControl.Transitions>
+                      <Transitions>
+                        <TransformOperationsTransition Property="LayoutTransform" Duration="0:0:0.175" />
+                        <DoubleTransition Property="Opacity" Duration="0:0:0.175" Easing="1,0,1,0" />
+                      </Transitions>
+                    </LayoutTransformControl.Transitions>
+                    <c:FadeOutTextBlock Text="{Binding Title}" HorizontalAlignment="Center" FontSize="{StaticResource FontSizeH9}"
+                                        IsVisible="{Binding $parent[ListBoxItem].IsSelected, Converter={x:Static BoolConverters.Not}}" />
+                  </LayoutTransformControl>
+                </StackPanel>
+              </Panel>
+            </c:NavBarItem>
+            <!-- <Panel ToolTip.Tip="{Binding Title}"
                    Width="75"
                    Height="58"
                    Margin="4 1"
@@ -192,7 +214,7 @@
                       Width="4" Height="24" CornerRadius="3"
                       Background="{DynamicResource AcrylicTrimForeground}"
                       IsVisible="{Binding $parent[ListBoxItem].IsSelected}" />
-            </Panel>
+            </Panel>-->
           </DataTemplate>
         </ListBox.DataTemplates>
       </ListBox>
