--- a/WalletWasabi.Fluent/Styles/Styles.axaml
+++ b/WalletWasabi.Fluent/Styles/Styles.axaml
@@ -23,7 +23,7 @@
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/TextBox.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/NotificationCard.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/HyperlinkButton.axaml" />
-  <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/AnimatedButton.axaml" />
+  <!-- <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/AnimatedButton.axaml" /> -->
   <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/CurrencyEntryBox.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/DualCurrencyEntryBox.axaml" />
   <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/HistoryPlaceholderPanel.axaml" />
