--- a/WalletWasabi.Fluent/Views/SearchBar/SearchBar.axaml
+++ b/WalletWasabi.Fluent/Views/SearchBar/SearchBar.axaml
@@ -9,7 +9,8 @@
              xmlns:behaviors="clr-namespace:WalletWasabi.Fluent.Behaviors"
              x:CompileBindings="True"
              x:DataType="searchBar:SearchBarViewModel"
-             x:Class="WalletWasabi.Fluent.Views.SearchBar.SearchBar">
+             x:Class="WalletWasabi.Fluent.Views.SearchBar.SearchBar"
+             x:Name="UserControl">
   <UserControl.Resources>
     <Thickness x:Key="TextControlBorderThemeThicknessFocused">1</Thickness>
   </UserControl.Resources>
@@ -128,11 +129,14 @@
     </Style>
   </UserControl.Styles>
 
-  <TextBox x:Name="SearchBox" Watermark="Search settings / advanced features" MaxLength="50" HorizontalAlignment="Stretch"
+  <TextBox x:Name="SearchBox" Watermark="Search settings / advanced features" MaxLength="100" HorizontalAlignment="Stretch"
            Text="{Binding SearchText, Mode=TwoWay}" VerticalAlignment="Center">
 
     <i:Interaction.Behaviors>
       <behaviors:TextBoxAutoSelectTextBehavior />
+      <behaviors:UnitTrigger Signal="{Binding Navigated}">
+        <CallMethodAction TargetObject="UserControl" MethodName="Unfocus" />
+      </behaviors:UnitTrigger>
       <behaviors:KeyDownTrigger Key="Enter" EventRoutingStrategy="Tunnel" MarkAsHandled="True">
         <InvokeCommandAction Command="{Binding NavigateToSearchCommand}" />
       </behaviors:KeyDownTrigger>
